.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/ShiftImportSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Shift Import Settings</label>
</CustomObject>