.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Allow_Delete_Results__c.field-meta.xml
<CustomField>
    <fullName>Allow_Delete_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Delete Results</label>
    <type>Checkbox</type>
</CustomField>