.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Allow_Quick_Create__c.field-meta.xml
<CustomField>
    <fullName>Allow_Quick_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Quick Create</label>
    <type>Checkbox</type>
</CustomField>