.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Default_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Default_Cancellation_Reason__c</fullName>
    <inlineHelpText>Must be present in Picklist Value Sets -&gt; Cancellation Reasons for versions of sirenum higher than 1.185</inlineHelpText>
    <label>Default Cancellation Reason</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>