.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Header_Columns__c.field-meta.xml
<CustomField>
    <fullName>Header_Columns__c</fullName>
    <description>REFERENCE, PO NUMBER, BOOKING DATE, SCHEDULED DATE, WORKER, SITE, ROTA, JOB ROLE, SHIFT TYPE, START, END, REQUIRED SHIFTS, COMMENTS, CANCELLED, BOOKED BY, Result</description>
    <inlineHelpText>There are 15 headers. To rename any of the header, just list all the headers with renamed values.  Default list is:
REFERENCE, PO NUMBER, BOOKING DATE, SCHEDULED DATE, WORKER, SITE, ROTA, JOB ROLE, SHIFT TYPE, START, END, REQUIRED SHIFTS, COMMENTS, CANCELLED, BOOKED BY, Result</inlineHelpText>
    <label>Header Columns</label>
    <type>TextArea</type>
</CustomField>