.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Import_Demand__c.field-meta.xml
<CustomField>
    <fullName>Import_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Shift Demands</label>
    <type>Checkbox</type>
</CustomField>