.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Import_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Import_Shifts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Shifts</label>
    <type>Checkbox</type>
</CustomField>