.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Match_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Match_Accounts__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <label>Match: Accounts</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>