.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Match_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Match_Contacts__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <inlineHelpText>API name of a field to be used for the tool to match contacts (defaults to Email)</inlineHelpText>
    <label>Match: Contacts</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>