.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Match_Job_Roles__c.field-meta.xml
<CustomField>
    <fullName>Match_Job_Roles__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <inlineHelpText>API name of field to be used to match Job Roles. Defaults to Name</inlineHelpText>
    <label>Match: Job Roles</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>