.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Match_Locations__c.field-meta.xml
<CustomField>
    <fullName>Match_Locations__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <inlineHelpText>API field name used to match Locations. Defaults to Name</inlineHelpText>
    <label>Match: Locations</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>