.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Match_Rotas__c.field-meta.xml
<CustomField>
    <fullName>Match_Rotas__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <inlineHelpText>API field name to match by</inlineHelpText>
    <label>Match: Rotas</label>
    <length>244</length>
    <required>true</required>
    <type>Text</type>
</CustomField>