.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Match_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Match_Shifts__c</fullName>
    <defaultValue>&quot;sirenum__FMS_Shift_ID__c&quot;</defaultValue>
    <label>Match: Shifts</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>