.vscode/allianceuat_compare/force-app/main/default/objects/ShiftImportSettings__c/fields/Send_Email_Results__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Results</label>
    <type>Checkbox</type>
</CustomField>